# EmscriptenExample

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  a.out.js  a.out.wasm  hello.html  hello_world.cpp
html/: embind.js  index.html
src/: CMakeLists.txt  main.cpp  tri.js
